--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div>
       <h4>Connect With Me</h4>
       <ul>
-        <li><a href="mailto:kmulkern16@gmail.com">Email</a></li>
+        <li><a href="mailto:kevin.m.mulkern@jpmorgan.com">Email</a></li>
       </ul>
     </div>
     <div>
@@ -32,8 +32,8 @@
         <p>Sales</p>
       </div>
       <div>
-        <h5>Analyst, J.P. Morgan</h5>
-        <p>Research</p>
+        <h5>Associate, J.P. Morgan</h5>
+        <p>Sales</p>
       </div>
     </div>
     <div>
