--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div id="wrapper">
     <h1>Kevin Mulkern</h1>
     <p>
-      <img src="Bio Pic_Kellogg.jpg">
+      <img src="Bio Pic_Kellogg.jpg" style="width: 180px;"">
     </p>
     <h2>Banker</h2>
     <h3>Chicago, IL</h3>
@@ -21,7 +21,7 @@
       </ul>
     </div>
     <div>
-      <h4>Summary</h4>
+      <h4 id="summary">Summary</h4>
       <p>
         Kevin studied at Carnegie Mellon University. In 2007, he began his career at J.P. Morgan. He has been there for 10 years.
     </div>
