--- a/page5.html
+++ b/page5.html
@@ -4,11 +4,12 @@
   <title>Real Estate Agent</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="style1.css">
+  <link rel="stylesheet" href="style5.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="https://use.fontawesome.com/f9001c39ac.js"></script>
   <link href="https://fonts.googleapis.com/css?family=IM+Fell+French+Canon:400i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" rel="stylesheet">
 </head>
 <body>
   <nav class="navbar navbar-default navbar-custom navbar-fixed-top topnav" role="navigation">
@@ -40,12 +41,22 @@
             </div>
         </div>
     </nav>
-    <div class="jumbotron vertical-center">
+    <section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h1 class="section-heading">Contact Us</h1>
+                </div>
+            </div>
+    <address>
       <div class="container">
-        <h1 class="intro-text"><strong>BuyDesign</strong></h1>
-        <p class="second-text"><mark>Free home improvement advice to help you buy or sell your home.</mark></p>
-      <p><a class="btn btn-default btn-lg" href="page3.html" role="button">Learn more</a></p>
-    </div>
-    </div>
+          <div class="row">
+              <div class="col-lg-12 text-center">
+      <strong>BuyDesign sponsored by Lucid Realty</strong><br>
+      1858 West Erie<br>
+      Chicago, IL 60622<br>
+      <abbr title="Phone">P:</abbr> (312) 738-0232<br>
+      <a href="mailto:info@lucidrealty.com">info@lucidrealty.com</a>
+    </address>
 </body>
 </html>
