--- a/page4.html
+++ b/page4.html
@@ -4,11 +4,12 @@
   <title>Real Estate Agent</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="style1.css">
+  <link rel="stylesheet" href="style3.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="https://use.fontawesome.com/f9001c39ac.js"></script>
   <link href="https://fonts.googleapis.com/css?family=IM+Fell+French+Canon:400i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" rel="stylesheet">
 </head>
 <body>
   <nav class="navbar navbar-default navbar-custom navbar-fixed-top topnav" role="navigation">
@@ -40,12 +41,54 @@
             </div>
         </div>
     </nav>
-    <div class="jumbotron vertical-center">
-      <div class="container">
-        <h1 class="intro-text"><strong>BuyDesign</strong></h1>
-        <p class="second-text"><mark>Free home improvement advice to help you buy or sell your home.</mark></p>
-      <p><a class="btn btn-default btn-lg" href="page3.html" role="button">Learn more</a></p>
-    </div>
+    <section id="time">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h1 class="section-heading">Design Time</h1>
+                    <h3 class="section-subheading text-muted">Use the time for anything. Our designers will attend home tours to helping design home improvements.</h3>
+                </div>
+            </div>
+    <div class="row">
+        <table style="width:300px" align="center" class="table table-striped table-bordered table-hover">
+          <tr>
+            <th style="text-align:center">Home Value</th>
+            <th style="text-align:center">Home Improvement Advice</th>
+          </tr>
+          <tr>
+            <td align="center">$1,000,000</td>
+            <td align="center">50 Hours</td>
+          </tr>
+          <tr>
+            <td align="center">$900,000</td>
+            <td align="center">45 Hours</td>
+          </tr>
+          <tr>
+            <td align="center">$800,000</td>
+            <td align="center">40 Hours</td>
+          </tr>
+          <tr>
+            <td align="center">$700,000</td>
+            <td align="center">35 Hours</td>
+          </tr>
+          <tr>
+            <td align="center">$600,000</td>
+            <td align="center">30 Hours</td>
+          </tr>
+          <tr>
+            <td align="center">$500,000</td>
+            <td align="center">25 Hours</td>
+          </tr>
+          <tr>
+            <td align="center">$400,000</td>
+            <td align="center">20 Hours</td>
+          </tr>
+          <tr>
+            <td align="center">$300,000</td>
+            <td align="center">15 Hours</td>
+          </tr>
+        </table>
+      </div>
     </div>
 </body>
 </html>
